Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -214,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names_and_ranks = [] # make sure the list is empty"
+    "names_and_ranks = [] # make sure the list is empty\n"
    ]
   },
   {
