Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -214,7 +214,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names_and_ranks = [] # make sure the list is empty\n"
+    "names_and_ranks = [] # make sure the list is empty\n",
+    "for index in "
    ]
   },
   {
