Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,8 @@
    "outputs": [],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
-    "for index in list(range(len(city_names)))"
+    "for index in list(range(len(city_names))):\n",
+    "    print()"
    ]
   },
   {
