Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,13 +210,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 .  Buenos Aires\n",
+      "2 .  Toronto\n",
+      "3 .  Pyeongchang\n",
+      "4 .  Marakesh\n",
+      "5 .  Albuquerque\n",
+      "6 .  Los Cabos\n",
+      "7 .  Greenville\n",
+      "8 .  Archipelago Sea\n",
+      "9 .  Walla Walla Valley\n",
+      "10 .  Salina Island\n",
+      "11 .  Solta\n",
+      "12 .  Iguazu Falls\n"
+     ]
+    }
+   ],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for index in list(range(len(city_names))):\n",
-    "    print(index+1, \". \", city_names)"
+    "    print(index+1, \". \", city_names[index])"
    ]
   },
   {
