--- a/index.ipynb
+++ b/index.ipynb
@@ -235,6 +235,7 @@
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for index in list(range(len(city_names))):\n",
+    "    names_and_ranks\n",
     "    print(index+1,\". \", city_names[index])"
    ]
   },
