Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -241,16 +241,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Iguazu Falls'"
+       "12"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
    "source": [
     "names_and_ranks[0] # '1. Buenos Aires'\n",
     "#names_and_ranks[1] # '2. Toronto'\n",
-    "names_and_ranks[-1] # '12. Iguazu Falls'"
+    "#names_and_ranks[-1] # '12. Iguazu Falls'"
    ]
   },
   {
