--- a/index.ipynb
+++ b/index.ipynb
@@ -235,7 +235,8 @@
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for index in list(range(len(city_names))):\n",
-    "    names_and_ranks = index+1,\". \", city_names[index]\n",
+    "    names_and_ranks\n",
+    "    = index+1,\". \", city_names[index]\n",
     "    print(names_and_ranks)"
    ]
   },
