Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -235,8 +235,7 @@
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for index in list(range(len(city_names))):\n",
-    "    names_and_ranks[i]\n",
-    "    = index+1,\". \", city_names[index]\n",
+    "    names_and_ranks[index] = index+1,\". \", city_names[index]\n",
     "    print(names_and_ranks)"
    ]
   },
