Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,7 @@
     "names_and_ranks = [] # make sure the list is empty\n",
     "for index in list(range(len(city_names))):\n",
     "    names_and_ranks = []\n",
-    "    names_and_ranks.append(index+1,\". \", city_names[index])\n",
+    "    names_and_ranks.append('index+1,\". \", city_names[index])\n",
     "    print(names_and_ranks)"
    ]
   },
