--- a/index.ipynb
+++ b/index.ipynb
@@ -236,8 +236,8 @@
     "names_and_ranks = [] # make sure the list is empty\n",
     "for index in list(range(len(city_names))):\n",
     "    names_and_ranks = (index+1,\". \", city_names[index])\n",
-    "    \n",
-    "    print(names_and_ranks)"
+    "    print(names_and_ranks)\n",
+    "list(names_and_ran)"
    ]
   },
   {
