Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -230,6 +230,16 @@
       "(11, '. ', 'Solta')\n",
       "(12, '. ', 'Iguazu Falls')\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[12, '. ', 'Iguazu Falls']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -237,7 +247,7 @@
     "for index in list(range(len(city_names))):\n",
     "    names_and_ranks = (index+1,\". \", city_names[index])\n",
     "    print(names_and_ranks)\n",
-    "list(names_and_ran)"
+    "list(names_and_ranks)"
    ]
   },
   {
