Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -228,8 +228,7 @@
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for index in list(range(len(city_names))):\n",
-    "    (index+1,\". \", city_names[index])\n",
-    "    names_and_ranks.append(names_and_ranks[index+1])\n",
+    "    names_and_ranks.append(index+1,\". \", city_names[index])\n",
     "    print(names_and_ranks)\n",
     "list(names_and_ranks)"
    ]
