--- a/index.ipynb
+++ b/index.ipynb
@@ -210,27 +210,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "append() takes exactly one argument (3 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-28-63d86fb93f83>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mnames_and_ranks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# make sure the list is empty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcity_names\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mnames_and_ranks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\". \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcity_names\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnames_and_ranks\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnames_and_ranks\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: append() takes exactly one argument (3 given)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 .  Buenos Aires\n",
+      "[None]\n",
+      "2 .  Toronto\n",
+      "[None, None]\n",
+      "3 .  Pyeongchang\n",
+      "[None, None, None]\n",
+      "4 .  Marakesh\n",
+      "[None, None, None, None]\n",
+      "5 .  Albuquerque\n",
+      "[None, None, None, None, None]\n",
+      "6 .  Los Cabos\n",
+      "[None, None, None, None, None, None]\n",
+      "7 .  Greenville\n",
+      "[None, None, None, None, None, None, None]\n",
+      "8 .  Archipelago Sea\n",
+      "[None, None, None, None, None, None, None, None]\n",
+      "9 .  Walla Walla Valley\n",
+      "[None, None, None, None, None, None, None, None, None]\n",
+      "10 .  Salina Island\n",
+      "[None, None, None, None, None, None, None, None, None, None]\n",
+      "11 .  Solta\n",
+      "[None, None, None, None, None, None, None, None, None, None, None]\n",
+      "12 .  Iguazu Falls\n",
+      "[None, None, None, None, None, None, None, None, None, None, None, None]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[None, None, None, None, None, None, None, None, None, None, None, None]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for index in list(range(len(city_names))):\n",
-    "    names_and_ranks.append(print(index+1,\". \", city_names[index])\n",
-    "    print(names_and_ranks)\n",
-    "list(names_and_ranks)"
+    "    names_and_ranks.append(print(index+1,\". \", city_names[index]))\n",
+    "    print(names_and_ranks)\n"
    ]
   },
   {
