--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -218,29 +218,17 @@
      "output_type": "stream",
      "text": [
       "1 .  Buenos Aires\n",
-      "[None]\n",
       "2 .  Toronto\n",
-      "[None, None]\n",
       "3 .  Pyeongchang\n",
-      "[None, None, None]\n",
       "4 .  Marakesh\n",
-      "[None, None, None, None]\n",
       "5 .  Albuquerque\n",
-      "[None, None, None, None, None]\n",
       "6 .  Los Cabos\n",
-      "[None, None, None, None, None, None]\n",
       "7 .  Greenville\n",
-      "[None, None, None, None, None, None, None]\n",
       "8 .  Archipelago Sea\n",
-      "[None, None, None, None, None, None, None, None]\n",
       "9 .  Walla Walla Valley\n",
-      "[None, None, None, None, None, None, None, None, None]\n",
       "10 .  Salina Island\n",
-      "[None, None, None, None, None, None, None, None, None, None]\n",
       "11 .  Solta\n",
-      "[None, None, None, None, None, None, None, None, None, None, None]\n",
-      "12 .  Iguazu Falls\n",
-      "[None, None, None, None, None, None, None, None, None, None, None, None]\n"
+      "12 .  Iguazu Falls\n"
      ]
     }
    ],
@@ -248,7 +236,8 @@
     "names_and_ranks = [] # make sure the list is empty\n",
     "for index in list(range(len(city_names))):\n",
     "    names_and_ranks.append(print(index+1,\". \", city_names[index]))\n",
-    "   "
+    "    \n",
+    "    "
    ]
   },
   {
