Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -230,6 +230,16 @@
       "11 .  Solta\n",
       "12 .  Iguazu Falls\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[None, None, None, None, None, None, None, None, None, None, None, None]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -237,7 +247,7 @@
     "for index in list(range(len(city_names))):\n",
     "    names_and_ranks.append(print(index+1,\". \", city_names[index]))\n",
     "    \n",
-    "    "
+    "names_and_ranks"
    ]
   },
   {
