Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -218,17 +218,29 @@
      "output_type": "stream",
      "text": [
       "1 .  Buenos Aires\n",
+      "[None]\n",
       "2 .  Toronto\n",
+      "[None, None]\n",
       "3 .  Pyeongchang\n",
+      "[None, None, None]\n",
       "4 .  Marakesh\n",
+      "[None, None, None, None]\n",
       "5 .  Albuquerque\n",
+      "[None, None, None, None, None]\n",
       "6 .  Los Cabos\n",
+      "[None, None, None, None, None, None]\n",
       "7 .  Greenville\n",
+      "[None, None, None, None, None, None, None]\n",
       "8 .  Archipelago Sea\n",
+      "[None, None, None, None, None, None, None, None]\n",
       "9 .  Walla Walla Valley\n",
+      "[None, None, None, None, None, None, None, None, None]\n",
       "10 .  Salina Island\n",
+      "[None, None, None, None, None, None, None, None, None, None]\n",
       "11 .  Solta\n",
-      "12 .  Iguazu Falls\n"
+      "[None, None, None, None, None, None, None, None, None, None, None]\n",
+      "12 .  Iguazu Falls\n",
+      "[None, None, None, None, None, None, None, None, None, None, None, None]\n"
      ]
     },
     {
@@ -237,7 +249,7 @@
        "[None, None, None, None, None, None, None, None, None, None, None, None]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
