--- a/index.ipynb
+++ b/index.ipynb
@@ -210,26 +210,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 .  Buenos Aires\n",
-      "2 .  Toronto\n",
-      "3 .  Pyeongchang\n",
-      "4 .  Marakesh\n",
-      "5 .  Albuquerque\n",
-      "6 .  Los Cabos\n",
-      "7 .  Greenville\n",
-      "8 .  Archipelago Sea\n",
-      "9 .  Walla Walla Valley\n",
-      "10 .  Salina Island\n",
-      "11 .  Solta\n",
-      "12 .  Iguazu Falls\n",
-      "[None, None, None, None, None, None, None, None, None, None, None, None]\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-35-b787305a10f3>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-35-b787305a10f3>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    names_and_ranks.append(\"index+1,\". \", city_names[index]\")\u001b[0m\n\u001b[0m                                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
