--- a/index.ipynb
+++ b/index.ipynb
@@ -210,26 +210,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "append() takes exactly one argument (3 given)",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-37-b7c776962422>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-36-ebb0e21dfff2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mnames_and_ranks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# make sure the list is empty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcity_names\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mnames_and_ranks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\". \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcity_names\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnames_and_ranks\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: append() takes exactly one argument (3 given)"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-37-b7c776962422>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    names_and_ranks.append(append_phrase)\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for index in list(range(len(city_names))):\n",
-    "    append_phrase = \n",
-    "    names_and_ranks.append(index+1,\". \", city_names[index])\n",
+    "    append_phrase = index+1,\". \", city_names[index\n",
+    "    names_and_ranks.append(append_phrase)\n",
     "print(names_and_ranks)"
    ]
   },
