Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,22 +210,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-37-b7c776962422>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-37-b7c776962422>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    names_and_ranks.append(append_phrase)\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, '. ', 'Buenos Aires'), (2, '. ', 'Toronto'), (3, '. ', 'Pyeongchang'), (4, '. ', 'Marakesh'), (5, '. ', 'Albuquerque'), (6, '. ', 'Los Cabos'), (7, '. ', 'Greenville'), (8, '. ', 'Archipelago Sea'), (9, '. ', 'Walla Walla Valley'), (10, '. ', 'Salina Island'), (11, '. ', 'Solta'), (12, '. ', 'Iguazu Falls')]\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for index in list(range(len(city_names))):\n",
-    "    append_phrase = index+1,\". \", city_names[index\n",
+    "    append_phrase = index+1,\". \", city_names[index]\n",
     "    names_and_ranks.append(append_phrase)\n",
     "print(names_and_ranks)"
    ]
