Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,16 +231,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12"
+       "(1, '. ', 'Buenos Aires')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
