--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,7 @@
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for index in list(range(len(city_names))):\n",
-    "    append_phrase = index+1 + \". \" + city_names[index]\n",
+    "    append_phrase = index+1, \". \" + city_names[index]\n",
     "    names_and_ranks.append(append_phrase)\n",
     "print(names_and_ranks)"
    ]
