Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,21 +210,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(1, '. ', 'Buenos Aires'), (2, '. ', 'Toronto'), (3, '. ', 'Pyeongchang'), (4, '. ', 'Marakesh'), (5, '. ', 'Albuquerque'), (6, '. ', 'Los Cabos'), (7, '. ', 'Greenville'), (8, '. ', 'Archipelago Sea'), (9, '. ', 'Walla Walla Valley'), (10, '. ', 'Salina Island'), (11, '. ', 'Solta'), (12, '. ', 'Iguazu Falls')]\n"
+      "1 .  Buenos Aires\n",
+      "2 .  Toronto\n",
+      "3 .  Pyeongchang\n",
+      "4 .  Marakesh\n",
+      "5 .  Albuquerque\n",
+      "6 .  Los Cabos\n",
+      "7 .  Greenville\n",
+      "8 .  Archipelago Sea\n",
+      "9 .  Walla Walla Valley\n",
+      "10 .  Salina Island\n",
+      "11 .  Solta\n",
+      "12 .  Iguazu Falls\n",
+      "[None, None, None, None, None, None, None, None, None, None, None, None]\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for index in list(range(len(city_names))):\n",
-    "    append_phrase = print(index+1, \". \", city_names[index]\n",
+    "    append_phrase = print(index+1, \". \", city_names[index])\n",
     "    names_and_ranks.append(append_phrase)\n",
     "print(names_and_ranks)"
    ]
