Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -237,6 +237,7 @@
     "names_and_ranks = [] # make sure the list is empty\n",
     "for index in list(range(len(city_names))):\n",
     "    append_phrase = print(index+1, \". \", city_names[index])\n",
+    "        for\n",
     "    names_and_ranks.append(append_phrase)\n",
     "print(names_and_ranks)"
    ]
