Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,26 +210,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 .  Buenos Aires\n",
-      "2 .  Toronto\n",
-      "3 .  Pyeongchang\n",
-      "4 .  Marakesh\n",
-      "5 .  Albuquerque\n",
-      "6 .  Los Cabos\n",
-      "7 .  Greenville\n",
-      "8 .  Archipelago Sea\n",
-      "9 .  Walla Walla Valley\n",
-      "10 .  Salina Island\n",
-      "11 .  Solta\n",
-      "12 .  Iguazu Falls\n",
-      "[None, None, None, None, None, None, None, None, None, None, None, None]\n"
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-45-9a3e5e8e8adf>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-45-9a3e5e8e8adf>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    for names_and_ranks:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
