Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,15 +210,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-45-9a3e5e8e8adf>, line 4)",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-46-35c5b19de842>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-45-9a3e5e8e8adf>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    for names_and_ranks:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-46-35c5b19de842>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    for names_and_ranks:\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -226,8 +226,8 @@
     "names_and_ranks = [] # make sure the list is empty\n",
     "for index in list(range(len(city_names))):\n",
     "    append_phrase = print(index+1, \". \", city_names[index])\n",
-    "        for names_and_ranks:\n",
-    "            names_and_ranks.append(append_phrase)\n",
+    "    for names_and_ranks:\n",
+    "        names_and_ranks.append(append_phrase)\n",
     "print(names_and_ranks)"
    ]
   },
