--- a/index.ipynb
+++ b/index.ipynb
@@ -236,8 +236,7 @@
     "names_and_ranks = [] # make sure the list is empty\n",
     "for index in list(range(len(city_names))):\n",
     "    append_phrase = print(index+1, \". \", city_names[index])\n",
-    "    names_and_ranks = names_and_ranks.append(append_phrase)\n",
-    "    list(names_and_ranks)"
+    "    names_and_ranks = names_and_ranks.append(append_phrase)"
    ]
   },
   {
