Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -230,6 +230,16 @@
       "11 .  Solta\n",
       "12 .  Iguazu Falls\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[None, None, None, None, None, None, None, None, None, None, None, None]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -238,7 +248,7 @@
     "    append_phrase = print(index+1, \". \", city_names[index])\n",
     "    names_and_ranks.append(append_phrase)\n",
     "list(names_and_ranks)\n",
-    "names"
+    "names_and_ranks"
    ]
   },
   {
