Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -248,7 +248,7 @@
     "    append_phrase = print(index+1, \". \", city_names[index])\n",
     "    names_and_ranks.append(append_phrase)\n",
     "    list(names_and_ranks)\n",
-    "names_and_ranks"
+    "names_and_ranks = "
    ]
   },
   {
