Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -228,25 +228,16 @@
       "9 .  Walla Walla Valley\n",
       "10 .  Salina Island\n",
       "11 .  Solta\n",
-      "12 .  Iguazu Falls\n"
+      "12 .  Iguazu Falls\n",
+      "[None, None, None, None, None, None, None, None, None, None, None, None]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[None, None, None, None, None, None, None, None, None, None, None, None]"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for index in list(range(len(city_names))):\n",
     "    names_and_ranks.append(print(index+1, \". \", city_names[index]))\n",
-    "names_and_ranks"
+    "print(names_and_ranks)"
    ]
   },
   {
