Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,22 +210,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-62-e259a85e30c0>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-62-e259a85e30c0>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    print(names_and_ranks)\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 .  Buenos Aires\n",
+      "2 .  Toronto\n",
+      "3 .  Pyeongchang\n",
+      "4 .  Marakesh\n",
+      "5 .  Albuquerque\n",
+      "6 .  Los Cabos\n",
+      "7 .  Greenville\n",
+      "8 .  Archipelago Sea\n",
+      "9 .  Walla Walla Valley\n",
+      "10 .  Salina Island\n",
+      "11 .  Solta\n",
+      "12 .  Iguazu Falls\n",
+      "['None', 'None', 'None', 'None', 'None', 'None', 'None', 'None', 'None', 'None', 'None', 'None']\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for index in list(range(len(city_names))):\n",
-    "    names_and_ranks.append(str(index+1, \". \", city_names[index]))\n",
+    "    names_and_ranks.append(str(print(index+1, \". \", city_names[index])))\n",
     "print(names_and_ranks)"
    ]
   },
