Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -228,6 +228,7 @@
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for index in list(range(len(city_names))):\n",
+    "    append_phrase = index+1, \". \", city_names[index]\n",
     "    names_and_ranks.append(index+1, \". \", city_names[index])\n",
     "print(names_and_ranks)"
    ]
