Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,40 +210,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(1, '. ', 'Buenos Aires'), (2, '. ', 'Toronto'), (3, '. ', 'Pyeongchang'), (4, '. ', 'Marakesh'), (5, '. ', 'Albuquerque'), (6, '. ', 'Los Cabos'), (7, '. ', 'Greenville'), (8, '. ', 'Archipelago Sea'), (9, '. ', 'Walla Walla Valley'), (10, '. ', 'Salina Island'), (11, '. ', 'Solta'), (12, '. ', 'Iguazu Falls')]\n"
+      "1 .  Buenos Aires\n",
+      "2 .  Toronto\n",
+      "3 .  Pyeongchang\n",
+      "4 .  Marakesh\n",
+      "5 .  Albuquerque\n",
+      "6 .  Los Cabos\n",
+      "7 .  Greenville\n",
+      "8 .  Archipelago Sea\n",
+      "9 .  Walla Walla Valley\n",
+      "10 .  Salina Island\n",
+      "11 .  Solta\n",
+      "12 .  Iguazu Falls\n",
+      "[None, None, None, None, None, None, None, None, None, None, None, None]\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for index in list(range(len(city_names))):\n",
-    "    append_phrase = index+1, \". \", city_names[index]\n",
+    "    append_phrase = print(index+1, \". \", city_names[index])\n",
     "    names_and_ranks.append(append_phrase)\n",
     "print(names_and_ranks)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-51-17fab6e30239>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnames_and_ranks\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# '1. Buenos Aires'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m#names_and_ranks[1] # '2. Toronto'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#names_and_ranks[-1] # '12. Iguazu Falls'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
-     ]
+     "data": {
+      "text/plain": [
+       "(1, '. ', 'Buenos Aires')"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
